examples/invalid/example3_function_arg_type.py
def add_one(a: int) -> int:
    return a + 1

x = add_one(True)
